# beyond_bets_tr

./: LICENSE  README.md  pyproject.toml  setup.cfg
examples/: demo.py  hello_world.py
src/beyond_bets/: __init__.py
src/beyond_bets/base/: dataset.py  transform.py
src/beyond_bets/datasets/: bets.py  numbers.py
src/beyond_bets/transforms/: bet_grader.py  market_hourly.py  player_daily.py  rollup.py  top_players.py
