[build-system]
requires = ["setuptools == 68.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "beyond_bets.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "beyond_bets"
dynamic = ["version"]
dependencies = [
  "py4j==0.10.9.7",
  "pyspark==3.5.2",
]
requires-python = ">= 3.10"
readme = "README.md"
license = {file = "LICENSE"}
